--- a/bm_gmaps_fix.info.yml
+++ b/bm_gmaps_fix.info.yml
@@ -1,5 +1,5 @@
 name: bm_gmaps_fix
 type: module
-description: Blue Marloc - Mondial IT - google maps fix
+description: Blue Marloc - Google Maps fix - fixes gmaps not being displayed in Gavias Ziston theme.
 core_version_requirement: ^10 || ^11
 package: Blue Marloc
